--- a/presentations/2022-09-28_git-and-github/2022-09-28_git-and-github.html
+++ b/presentations/2022-09-28_git-and-github/2022-09-28_git-and-github.html
@@ -488,11 +488,15 @@ SourceForge
 <section id="github-actions" class="slide level2">
 <h2>GitHub Actions</h2>
 <p>etc</p>
-
-<img src="./templates/UU_logo_2021_EN_RGB.png" class="slide-logo r-stretch"><div class="footer footer-default">
+</section></section>
+<section id="section" class="title-slide slide level1 center" data-background-color="#FFCD00">
+<h1></h1>
+<p><img data-src="./templates/UU_logo_2021_EN_RGB_payoff.png"></p>
+<p><img src="./templates/UU_logo_2021_EN_RGB.png" class="slide-logo"></p>
+<div class="footer footer-default">
 
 </div>
-</section></section>
+</section>
     </div>
   </div>
 
