--- a/presentations/2022-09-28_git-and-github/2022-09-28_git-and-github.html
+++ b/presentations/2022-09-28_git-and-github/2022-09-28_git-and-github.html
@@ -484,19 +484,76 @@ SourceForge
 <div style="text-align: left; margin-top: 4em">
 <p><a href="https://skills.github.com/" data-preview-link="true">https://skills.github.com/</a></p>
 </div>
+</section></section>
+<section>
+<section id="github-utrechtuniversity" class="title-slide slide level1 center" data-background-color="#FFCD00">
+<h1>GitHub <span class="citation" data-cites="UtrechtUniversity">@UtrechtUniversity</span></h1>
+<p><strong>https://github.com/UtrechtUniversity</strong></p>
+<p><img data-src="./templates/UU_logo_2021_EN_RGB.png" class="absolute" style="top: -200px; left: -240px; width: 300px; height: 120px; "></p>
 </section>
-<section id="github-actions" class="slide level2">
-<h2>GitHub Actions</h2>
+<section id="why-use-uu-github-organization" class="slide level2">
+<h2>Why use UU GitHub Organization?</h2>
+<p><br> <strong>Benefits</strong></p>
+<ul>
+<li>Create Teams</li>
+<li>GitHub pages for private repositories</li>
+<li>Workflow options for private repositories</li>
+<li>Visibility</li>
+</ul>
+</section>
+<section id="preview" class="slide level2">
+<h2>Preview</h2>
+<p><a href="https://github.com/UtrechtUniversity" data-preview-link="true">https://github.com/UtrechtUniversity</a></p>
+</section></section>
+<section>
+<section id="getting-started-with-github-actions" class="title-slide slide level1 center" data-background-color="#FFCD00">
+<h1>Getting Started With GitHub Actions</h1>
+<p><strong>Jelle Treep &amp; Neha Moopen</strong></p>
+<p>Research Data Management Support</p>
+<p><img data-src="./templates/UU_logo_2021_EN_RGB.png" class="absolute" style="top: -200px; left: -240px; width: 300px; height: 120px; "></p>
+</section>
+<section id="what-is-github-actions" class="slide level2">
+<h2>What is GitHub Actions</h2>
 <div style="text-align: left; margin-top: 2em">
 <ul>
-<li>Free service</li>
+<li>Free GitHub service</li>
 <li>Perform tasks on the servers of GitHub</li>
 <li>Events/scheduled times</li>
 </ul>
 </div>
 </section>
-<section id="usage" class="slide level2">
-<h2>Usage</h2>
+<section id="why-using-github-actions" class="slide level2">
+<h2>Why using GitHub Actions?</h2>
+<div style="text-align: left; margin-top: 2em">
+<ul>
+<li>
+Running test scripts
+</li>
+<li>
+CI/CD
+</li>
+<li>
+Packaging
+</li>
+<li>
+Parsing/rendering
+<ul>
+<li>
+GitHub Pages
+</li>
+<li>
+websites
+</li>
+<li>
+documentation
+</li>
+</ul>
+</li>
+</ul>
+</div>
+</section>
+<section id="examples" class="slide level2">
+<h2>Examples:</h2>
 <div style="text-align: left; margin-top: 2em">
 <ul>
 <li>Testing</li>
