--- a/presentations/2022-09-28_git-and-github/2022-09-28_git-and-github-speaker.html
+++ b/presentations/2022-09-28_git-and-github/2022-09-28_git-and-github-speaker.html
@@ -503,7 +503,12 @@
 <section id="exercise" class="slide level2">
 <h2>Exercise!</h2>
 <div style="text-align: left; margin-top: 4em">
-<p><a href="https://skills.github.com/" data-preview-link="true">https://skills.github.com/</a></p>
+<p>Check out <a href="https://skills.github.com/" data-preview-link="true">https://skills.github.com/</a></p>
+<p>You can try out any of the exercises, we do have some recommendations based on today’s presentation:</p>
+<ul>
+<li><p>For beginners, the <a href="https://github.com/skills/introduction-to-github">Introduction to GitHub</a> exercise is a nice start. You’ll make a short Markdown file you can use as your profile README and learn about repositories, branches, commits, and pull requests while doing so!</p></li>
+<li><p>For experienced users, the <a href="https://github.com/skills/hello-github-actions">Hello GitHub Actions</a> exercise is a great introduction to the topic.</p></li>
+</ul>
 </div>
 </section>
 <section id="github-actions" class="slide level2">
