--- a/presentations/2022-09-28_git-and-github/2022-09-28_git-and-github.html
+++ b/presentations/2022-09-28_git-and-github/2022-09-28_git-and-github.html
@@ -382,7 +382,6 @@
 <section>
 <section id="getting-started-with-git-github" class="title-slide slide level1 center" data-background-color="#FFCD00">
 <h1>Getting Started With Git &amp; GitHub</h1>
-<p><strong>Jelle Treep &amp; Neha Moopen</strong></p>
 <p>Research Data Management Support</p>
 <p><img data-src="./templates/UU_logo_2021_EN_RGB.png" class="absolute" style="top: -200px; left: -240px; width: 300px; height: 120px; "></p>
 </section>
@@ -488,7 +487,7 @@ SourceForge
 <section>
 <section id="github-utrechtuniversity" class="title-slide slide level1 center" data-background-color="#FFCD00">
 <h1>GitHub <span class="citation" data-cites="UtrechtUniversity">@UtrechtUniversity</span></h1>
-<p><strong>https://github.com/UtrechtUniversity</strong></p>
+<p><strong><a href="https://github.com/UtrechtUniversity" data-preview-link="true">https://github.com/UtrechtUniversity</a></strong></p>
 <p><img data-src="./templates/UU_logo_2021_EN_RGB.png" class="absolute" style="top: -200px; left: -240px; width: 300px; height: 120px; "></p>
 </section>
 <section id="why-use-uu-github-organization" class="slide level2">
@@ -500,10 +499,6 @@ SourceForge
 <li>Workflow options for private repositories</li>
 <li>Visibility</li>
 </ul>
-</section>
-<section id="preview" class="slide level2">
-<h2>Preview</h2>
-<p><a href="https://github.com/UtrechtUniversity" data-preview-link="true">https://github.com/UtrechtUniversity</a></p>
 </section></section>
 <section>
 <section id="getting-started-with-github-actions" class="title-slide slide level1 center" data-background-color="#FFCD00">
@@ -610,7 +605,7 @@ jobs:
 <p><img data-src="./templates/UU_logo_2021_EN_RGB_payoff.png"></p>
 <p><img src="./templates/UU_logo_2021_EN_RGB.png" class="slide-logo"></p>
 <div class="footer footer-default">
-
+<p>Jelle Treep &amp; Neha Moopen</p>
 </div>
 </section>
     </div>
