--- a/presentations/2022-10-26_code-readability/2022-10-26_code-readability.html
+++ b/presentations/2022-10-26_code-readability/2022-10-26_code-readability.html
@@ -555,8 +555,8 @@
 <p>Don’t have your own code? You can use our exercise files:</p>
 <div style="text-align: left">
 <ul>
-<li><p>R: <a href="https://raw.githubusercontent.com/UtrechtUniversity/programming-cafe/blob/main/exercises/code-readability/bad.R">bad.R</a></p></li>
-<li><p>Python: <a href="https://raw.githubusercontent.com/UtrechtUniversity/programming-cafe/main/exercises/code-readability/pep8.py">pep8.py</a></p></li>
+<li><p>R: <a href="https://github.com/UtrechtUniversity/programming-cafe/blob/main/exercises/code-readability/bad.R">bad.R</a></p></li>
+<li><p>Python: <a href="https://github.com/UtrechtUniversity/programming-cafe/blob/main/exercises/code-readability/pep8.py">pep8.py</a></p></li>
 </ul>
 </div>
 </section>
