add link to repo

--- a/presentations/2023-01-25_polars-copilot/2023-01-25_github-copilot-speaker.html
+++ b/presentations/2023-01-25_polars-copilot/2023-01-25_github-copilot-speaker.html
@@ -376,6 +376,12 @@
 <li>Interaction</li>
 </ul>
 </div>
+</section>
+<section id="resources" class="slide level2">
+<h2>Resources</h2>
+<div style="text-align: left; margin-top: 2em; font-size: 1.3em">
+<p><a href="https://github.com/UtrechtUniversity/programming-cafe">https://github.com/UtrechtUniversity/programming-cafe</a></p>
+</div>
 </section></section>
 <section>
 <section id="github-copilot" class="title-slide slide level1 center" data-background-color="#FFCD00">
