--- a/presentations/2023-02-22_projects-workflows/2023-02-22_project-management.html
+++ b/presentations/2023-02-22_projects-workflows/2023-02-22_project-management.html
@@ -397,7 +397,7 @@
 <li>Project design</li>
 <li>Code organization</li>
 <li>Data storage and organization</li>
-<li>Workflow management</li>
+<li>Next steps</li>
 </ul>
 </div>
 </section>
@@ -568,12 +568,15 @@ irsync -rKV i:myfolder "$TMPDIR"/input
 </section>
 <section id="advancedfuture-topics" class="slide level2">
 <h2>Advanced/future topics</h2>
+<div style="text-align: left; margin-top: 2em">
 <ul>
 <li>Makefiles</li>
 <li>Workflow management tools</li>
 <li>Continuous integration and testing</li>
 <li>Containers</li>
+<li>APIs</li>
 </ul>
+</div>
 </section>
 <section id="resources" class="slide level2">
 <h2>Resources:</h2>
