--- a/presentations/2023-02-22_projects-workflows/2023-02-22_project-management-speaker.html
+++ b/presentations/2023-02-22_projects-workflows/2023-02-22_project-management-speaker.html
@@ -342,22 +342,26 @@
 <td>15 min</td>
 </tr>
 <tr class="odd">
+<td>Discussion</td>
+<td>10 min</td>
+</tr>
+<tr class="even">
+<td>Work on your own code</td>
+<td>30 min</td>
+</tr>
+<tr class="odd">
 <td>Basics of project management</td>
 <td>10 min</td>
 </tr>
 <tr class="even">
-<td>Work on your own code</td>
-<td>30 min</td>
-</tr>
-<tr class="odd">
 <td>HDF5</td>
 <td>10 min</td>
 </tr>
-<tr class="even">
+<tr class="odd">
 <td>Work on your own code</td>
 <td>30 min</td>
 </tr>
-<tr class="odd">
+<tr class="even">
 <td>Drinks!</td>
 <td></td>
 </tr>
