added link to UU README cron job

--- a/site/static/2023-11-02_scheduling-scripts/2023-11-02_scheduling-scripts-speaker.html
+++ b/site/static/2023-11-02_scheduling-scripts/2023-11-02_scheduling-scripts-speaker.html
@@ -402,7 +402,11 @@
 <section id="how-can-we-schedule-jobs" class="slide level2">
 <h2>How Can We Schedule Jobs?</h2>
 <p>Using a job scheduler! These are applications already available on your computer. You use them for controlling unattended background program execution of jobs.</p>
-<p>They differ per operating system: - <strong>Windows:</strong> Windows Task Scheduler - <strong>MacOS &amp; Linux:</strong> <code>cron</code></p>
+<p>They differ per operating system:</p>
+<ul>
+<li><p><strong>Windows:</strong> Windows Task Scheduler</p></li>
+<li><p><strong>MacOS &amp; Linux:</strong> <code>cron</code></p></li>
+</ul>
 </section>
 <section id="windows-task-scheduler" class="slide level2">
 <h2>Windows Task Scheduler</h2>
@@ -450,7 +454,7 @@
 <h2>GitHub Actions</h2>
 <ul>
 <li><p>You can run <code>cron</code> via GitHub Actions</p></li>
-<li><p>Check out how the README of the UU GitHub Organization is updated everyday using a <code>cron</code> job.</p></li>
+<li><p>Check out how the README of the UU GitHub Organization is updated everyday using a <code>cron</code> job: <a href="https://github.com/UtrechtUniversity/.github/blob/main/.github/workflows/update_featured.yml">https://github.com/UtrechtUniversity/.github/blob/main/.github/workflows/update_featured.yml</a></p></li>
 </ul>
 </section>
 <section id="r-packages" class="slide level2">
